--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,48 +1,26 @@
-name: Python application
+name: Run AI Crypto Evaluator
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
-  build:
-
+  run-script:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8 pytest  # Ensure flake8 & pytest are installed
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    - name: Lint with flake8
-      run: |
-        # Stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # Exit-zero treats all errors as warnings
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics || true
-
-    - name: Test with pytest
-      run: |
-        pytest || true
-
-    - name: Run AI Crypto Evaluator
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        CMC_API_KEY: ${{ secrets.CMC_API_KEY }}
-      run: |
-        python cryptotracker.py || true
+      - name: Run Crypto Evaluator
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          CMC_API_KEY: ${{ secrets.CMC_API_KEY }}
+        run: python cryptotracker.py
